--- a/programy/FRONTEND/style.css
+++ b/programy/FRONTEND/style.css
@@ -3,9 +3,75 @@ body {
     display: flex;
     align-content: center;
     justify-content: center;
+    background-color: #ccc;
 }
 #container {
     margin-left:auto;
     margin-right:auto;
+    background-color: whitesmoke;
+    width: 1200px;
+}
+#top {
+    margin-top:20px;
+    margin-left: 20px;
+    margin-bottom: 20px;
+    margin-right: 20px;
+    width: 1160px;
+    background-color: blue;
+    height: 100px;
+}
+#left {
+    margin-top:20px;
+    margin-left: 20px;
+    margin-bottom: 20px;
+    margin-right: 20px;
+    width: 200px;
+    background-color: red;
+    min-height: 100px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    float:left;
+}
+#pasieka {
+    margin-left: 10px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    width: 180px;
+    min-height: 100px;;
+    background-color: green;
+}
+#ul {
+    margin-top:10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    width: 180px;
+    min-height: 100px;;
     background-color: orange;
+}
+#center {
+    margin-top:20px;
+    margin-bottom: 20px;
+    width: 940px;
+    min-height: 230px;
+    background-color: violet;
+    float:left;
+}
+#pasieka_select {
+    border-radius: 0px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
+    min-height: 30px;
+    margin: 0px;
+}
+#ul_select {
+    border-radius: 0px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
+    min-height: 30px;
+    margin: 0px;
+}
+select {
+    min-width: 120px;
 }
