--- a/programy/web/style.css
+++ b/programy/web/style.css
@@ -3,22 +3,25 @@ body {
     display: flex;
     align-content: center;
     justify-content: center;
-    background-color: #ccc;
+    /* background-color: #ccc; */
+    background-image: url('res/hex-pattern-1.jpg')
 }
 #container {
     margin-left:auto;
     margin-right:auto;
-    background-color: whitesmoke;
+    background-color: rgba(194, 194, 194, 0.705);
     width: 1200px;
+    opacity: 0.97;
 }
 #top {
-    margin-top:20px;
+    margin-top:10px;
     margin-left: 20px;
     margin-bottom: 20px;
     margin-right: 20px;
     width: 1160px;
-    background-color: blue;
+    background-color: orange;
     height: 100px;
+    border-radius: 20px;
 }
 #left {
     margin-top:20px;
@@ -26,11 +29,12 @@ body {
     margin-bottom: 20px;
     margin-right: 20px;
     width: 200px;
-    background-color: red;
+    background-color: orangered;
     min-height: 100px;
     padding-top: 10px;
     padding-bottom: 10px;
     float:left;
+    border-radius: 10px;
 }
 #pasieka {
     margin-left: 10px;
@@ -38,7 +42,7 @@ body {
     margin-right: 10px;
     width: 180px;
     min-height: 100px;;
-    background-color: green;
+    background-color: rgb(220, 223, 64);
 }
 #ul {
     margin-top:10px;
@@ -46,15 +50,16 @@ body {
     margin-right: 10px;
     width: 180px;
     min-height: 100px;;
-    background-color: orange;
+    background-color: rgb(220, 223, 64);
 }
 #center {
     margin-top:20px;
     margin-bottom: 20px;
     width: 940px;
     min-height: 230px;
-    background-color: violet;
+    background-color: rgb(236, 231, 231);
     float:left;
+    border-radius: 5px;
 }
 #pasieka_select {
     border-radius: 0px;
@@ -78,5 +83,23 @@ select {
 #center_opcje {
     height: 100px;
     width: 940px;
-    background-color: chocolate;
+    /* background-color: chocolate; */
+    border-bottom: 1px;
+    border-style: dashed;
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    border-color: white;
+}
+#center_tresc {
+    min-height: 600px;
+}
+#stopka {
+    width: 1150px;
+    border-radius: 10px;
+    background-color: beige;
+    height: 40px;
+    float: left;
+    margin-left: 20px;
+    padding: 5px;
 }
