--- a/kod aplikacja/aplikacja/app/src/main/res/layout/fragment_comm_local_download_ble.xml
+++ b/kod aplikacja/aplikacja/app/src/main/res/layout/fragment_comm_local_download_ble.xml
@@ -80,7 +80,7 @@
         android:id="@+id/viewBleSubmenuDatePomiar"
         android:layout_width="0dp"
         android:layout_height="205dp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -205,7 +205,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <Button
             android:id="@+id/btnCommLocalDownloadBleSynch"
@@ -217,6 +217,7 @@
             android:text="Synch"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
 
         <EditText
             android:id="@+id/inputDate"
@@ -230,6 +231,19 @@
             app:layout_constraintTop_toTopOf="@+id/btnCommLocalDownloadBleSynch"
             tools:layout_conversion_absoluteHeight="45dp"
             tools:layout_conversion_absoluteWidth="401dp" />
+
+        <Button
+            android:id="@+id/btnCommLocalDownloadBleSynchroTime"
+            android:layout_width="145dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="84dp"
+            android:layout_marginEnd="32dp"
+            android:enabled="true"
+            android:text="Synch time"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
